--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://www.onet.dev/donate"
   },
   "engines": {
-    "node": ">=22.13.0"
+    "node": ">=20.18.0"
   },
   "private": false,
   "license": "MIT",
@@ -49,81 +49,79 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/bundle-analyzer": "^15.1.5",
-    "@sentry/nextjs": "^8.50.0",
-    "@vercel/analytics": "^1.4.1",
+    "@next/bundle-analyzer": "^15.2.4",
+    "@sentry/nextjs": "^9.10.1",
+    "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
-    "color": "^4.2.3",
-    "eslint-config-next": "^15.1.5",
+    "color": "^5.0.0",
+    "eslint-config-next": "^15.2.4",
     "html-react-parser": "^5.2.2",
     "json-schema-to-zod": "^2.6.0",
-    "marked": "^15.0.6",
-    "next": "^15.1.5",
-    "next-i18next": "^15.4.1",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-confetti": "^6.2.2",
-    "react-dom": "^19.0.0",
+    "marked": "^15.0.7",
+    "next": "^15.2.4",
+    "next-i18next": "^15.4.2",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
+    "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
-    "react-hook-form": "^7.54.2",
-    "react-share": "^5.1.2",
-    "react-timeago": "^7.2.0",
+    "react-hook-form": "^7.55.0",
+    "react-share": "^5.2.2",
+    "react-timeago": "^8.0.0",
     "react-use": "^17.6.0",
-    "sanitize-html": "^2.14.0",
-    "yaml": "^2.7.0",
-    "zod": "^3.24.1",
-    "zod-to-json-schema": "^3.24.1",
+    "sanitize-html": "^2.15.0",
+    "yaml": "^2.7.1",
+    "zod": "^3.24.2",
+    "zod-to-json-schema": "^3.24.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "@next/eslint-plugin-next": "^15.1.5",
-    "@storybook/addon-essentials": "^8.5.0",
-    "@storybook/addon-interactions": "^8.5.0",
-    "@storybook/addon-links": "^8.5.0",
-    "@storybook/addon-onboarding": "^8.5.0",
-    "@storybook/addon-themes": "^8.5.0",
-    "@storybook/blocks": "^8.5.0",
-    "@storybook/nextjs": "^8.5.0",
-    "@storybook/react": "^8.5.0",
-    "@storybook/test": "^8.5.0",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
+    "@next/eslint-plugin-next": "^15.2.4",
+    "@storybook/addon-essentials": "^8.6.11",
+    "@storybook/addon-interactions": "^8.6.11",
+    "@storybook/addon-links": "^8.6.11",
+    "@storybook/addon-onboarding": "^8.6.11",
+    "@storybook/addon-themes": "^8.6.11",
+    "@storybook/blocks": "^8.6.11",
+    "@storybook/nextjs": "^8.6.11",
+    "@storybook/react": "^8.6.11",
+    "@storybook/test": "^8.6.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@types/color": "^4.2.0",
     "@types/eslint": "^9.6.1",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/jest": "^29.5.14",
     "@types/lint-staged": "^13.3.0",
-    "@types/node": "^22.10.7",
-    "@types/react": "^19.0.7",
-    "@types/react-dom": "^19.0.3",
+    "@types/node": "^22.13.14",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@types/react-timeago": "^4.1.7",
-    "@types/sanitize-html": "^2.13.0",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
-    "autoprefixer": "^10.4.20",
-    "chromatic": "^11.25.1",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-storybook": "^0.11.2",
+    "@types/sanitize-html": "^2.15.0",
+    "autoprefixer": "^10.4.21",
+    "chromatic": "^11.27.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-storybook": "^0.12.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "favicons": "^7.2.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.4.1",
-    "postcss": "^8.5.1",
-    "prettier": "^3.4.2",
+    "lint-staged": "^15.5.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "sharp": "^0.33.5",
-    "storybook": "^8.5.0",
+    "storybook": "^8.6.11",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.2",
-    "typescript": "5.7.3"
+    "tsx": "^4.19.3",
+    "typescript": "5.8.2",
+    "typescript-eslint": "^8.28.0"
   },
   "peerDependencies": {
     "express": "^4.21.1",
