--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-share": "^5.2.2",
     "react-timeago": "^8.0.0",
     "react-use": "^17.6.0",
+    "rtl-detect": "^1.1.2",
     "sanitize-html": "^2.15.0",
     "yaml": "^2.7.1",
     "zod": "^3.24.2",
@@ -101,6 +102,7 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@types/react-timeago": "^4.1.7",
+    "@types/rtl-detect": "^1.0.3",
     "@types/sanitize-html": "^2.15.0",
     "autoprefixer": "^10.4.21",
     "chromatic": "^11.27.0",
