--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,6 +30,6 @@ jobs:
           registry-url: https://registry.npmjs.org
           cache: 'pnpm'
       - run: pnpm install --frozen-lockfile
-      - run: pnpm run build:deployment-meta
+      - run: pnpm run build:artifacts
       - run: pnpm run lint
       - run: pnpm run type-check
