--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@next/bundle-analyzer": "^15.2.4",
+    "@next/mdx": "^15.2.4",
     "@sentry/nextjs": "^9.10.1",
     "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
@@ -69,6 +72,7 @@
     "react-share": "^5.2.2",
     "react-timeago": "^8.0.0",
     "react-use": "^17.6.0",
+    "remark-gfm": "^4.0.1",
     "rtl-detect": "^1.1.2",
     "sanitize-html": "^2.15.0",
     "yaml": "^2.7.1",
@@ -98,6 +102,7 @@
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/jest": "^29.5.14",
     "@types/lint-staged": "^13.3.0",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
