--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": ">=20.18.0"
   },
   "private": false,
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "build:article-index": "tsx ./scripts/build-article-index.ts",
@@ -59,7 +60,6 @@
     "color": "^5.0.0",
     "eslint-config-next": "^15.2.4",
     "html-react-parser": "^5.2.2",
-    "json-schema-to-zod": "^2.6.0",
     "marked": "^15.0.7",
     "next": "^15.2.4",
     "next-intl": "^4.0.2",
