--- a/.envrc.example
+++ b/.envrc.example
@@ -1,3 +1,4 @@
+export NEXT_PUBLIC_SENTRY_ENABLED=true
 export NEXT_PUBLIC_SENTRY_CLIENT_DSN=https://{ID1}@{ID2}.ingest.de.sentry.io/{ID3}
 export SENTRY_SERVER_DSN=https://{ID1}@{ID2}.ingest.de.sentry.io/{ID3}
 export SENTRY_EDGE_DSN=https://{ID1}@{ID2}.ingest.de.sentry.io/{ID3}
